Enhanced professional design: Added all 20+ platforms with authentic branding, improved hover effects, and premium visual polish

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                         <div class="stat-label">Active Users</div>
                     </div>
                     <div class="stat">
-                        <div class="stat-number">15+</div>
+                        <div class="stat-number">20+</div>
                         <div class="stat-label">Platforms</div>
                     </div>
                     <div class="stat">
@@ -361,11 +361,11 @@
             <div class="section-header">
                 <div class="section-badge">
                     <i class="fas fa-globe"></i>
-                    <span>15+ Platforms</span>
+                    <span>20+ Platforms</span>
                 </div>
                 <h2 class="section-title">Grow Everywhere Your Audience Is</h2>
                 <p class="section-description">
-                    Support for all major social media platforms with specialized strategies for each
+                    Comprehensive support for all major social media platforms with AI-powered strategies tailored for each platform's unique algorithm and audience
                 </p>
             </div>
 
@@ -484,15 +484,269 @@
                     </div>
                 </div>
 
-                <!-- More Platforms Button -->
-                <div class="platform-card more-platforms">
-                    <div class="more-content">
-                        <div class="more-icon">
-                            <i class="fas fa-plus"></i>
+                <div class="platform-card" data-platform="spotify">
+                    <div class="platform-header">
+                        <div class="platform-icon spotify">
+                            <i class="fab fa-spotify"></i>
                         </div>
-                        <h3>+9 More Platforms</h3>
-                        <p>Spotify, Discord, Telegram, Twitch, Snapchat, Pinterest, Reddit, and more...</p>
-                        <a href="dashboard.html" class="btn btn-outline">View All Platforms</a>
+                        <div class="platform-info">
+                            <h3>Spotify</h3>
+                            <span>Music Streaming</span>
+                        </div>
+                    </div>
+                    <p>Boost your music career with more followers, plays, and playlist additions on Spotify.</p>
+                    <div class="platform-features">
+                        <span>Followers</span>
+                        <span>Plays</span>
+                        <span>Saves</span>
+                        <span>Playlists</span>
+                    </div>
+                </div>
+
+                <div class="platform-card" data-platform="discord">
+                    <div class="platform-header">
+                        <div class="platform-icon discord">
+                            <i class="fab fa-discord"></i>
+                        </div>
+                        <div class="platform-info">
+                            <h3>Discord</h3>
+                            <span>Community Server</span>
+                        </div>
+                    </div>
+                    <p>Grow your Discord server with active members and boost engagement in your community.</p>
+                    <div class="platform-features">
+                        <span>Members</span>
+                        <span>Online Users</span>
+                        <span>Boosts</span>
+                        <span>Activity</span>
+                    </div>
+                </div>
+
+                <div class="platform-card" data-platform="telegram">
+                    <div class="platform-header">
+                        <div class="platform-icon telegram">
+                            <i class="fab fa-telegram"></i>
+                        </div>
+                        <div class="platform-info">
+                            <h3>Telegram</h3>
+                            <span>Messaging Platform</span>
+                        </div>
+                    </div>
+                    <p>Increase your Telegram channel subscribers and boost message views and engagement.</p>
+                    <div class="platform-features">
+                        <span>Subscribers</span>
+                        <span>Views</span>
+                        <span>Reactions</span>
+                        <span>Shares</span>
+                    </div>
+                </div>
+
+                <div class="platform-card" data-platform="twitch">
+                    <div class="platform-header">
+                        <div class="platform-icon twitch">
+                            <i class="fab fa-twitch"></i>
+                        </div>
+                        <div class="platform-info">
+                            <h3>Twitch</h3>
+                            <span>Live Streaming</span>
+                        </div>
+                    </div>
+                    <p>Grow your Twitch channel with more followers, viewers, and engagement during streams.</p>
+                    <div class="platform-features">
+                        <span>Followers</span>
+                        <span>Viewers</span>
+                        <span>Chat Activity</span>
+                        <span>Clips</span>
+                    </div>
+                </div>
+
+                <div class="platform-card" data-platform="snapchat">
+                    <div class="platform-header">
+                        <div class="platform-icon snapchat">
+                            <i class="fab fa-snapchat"></i>
+                        </div>
+                        <div class="platform-info">
+                            <h3>Snapchat</h3>
+                            <span>Ephemeral Content</span>
+                        </div>
+                    </div>
+                    <p>Increase your Snapchat score, story views, and build a larger audience for your snaps.</p>
+                    <div class="platform-features">
+                        <span>Friends</span>
+                        <span>Story Views</span>
+                        <span>Snap Score</span>
+                        <span>Streaks</span>
+                    </div>
+                </div>
+
+                <div class="platform-card" data-platform="pinterest">
+                    <div class="platform-header">
+                        <div class="platform-icon pinterest">
+                            <i class="fab fa-pinterest"></i>
+                        </div>
+                        <div class="platform-info">
+                            <h3>Pinterest</h3>
+                            <span>Visual Discovery</span>
+                        </div>
+                    </div>
+                    <p>Grow your Pinterest presence with more followers, saves, and board engagement.</p>
+                    <div class="platform-features">
+                        <span>Followers</span>
+                        <span>Saves</span>
+                        <span>Impressions</span>
+                        <span>Clicks</span>
+                    </div>
+                </div>
+
+                <div class="platform-card" data-platform="reddit">
+                    <div class="platform-header">
+                        <div class="platform-icon reddit">
+                            <i class="fab fa-reddit"></i>
+                        </div>
+                        <div class="platform-info">
+                            <h3>Reddit</h3>
+                            <span>Community Discussion</span>
+                        </div>
+                    </div>
+                    <p>Boost your Reddit karma, post upvotes, and grow your subreddit community.</p>
+                    <div class="platform-features">
+                        <span>Karma</span>
+                        <span>Upvotes</span>
+                        <span>Comments</span>
+                        <span>Awards</span>
+                    </div>
+                </div>
+
+                <div class="platform-card" data-platform="google">
+                    <div class="platform-header">
+                        <div class="platform-icon google">
+                            <i class="fab fa-google"></i>
+                        </div>
+                        <div class="platform-info">
+                            <h3>Google My Business</h3>
+                            <span>Local SEO</span>
+                        </div>
+                    </div>
+                    <p>Improve your Google Business profile with more reviews, ratings, and local visibility.</p>
+                    <div class="platform-features">
+                        <span>Reviews</span>
+                        <span>Ratings</span>
+                        <span>Views</span>
+                        <span>Calls</span>
+                    </div>
+                </div>
+
+                <div class="platform-card" data-platform="kick">
+                    <div class="platform-header">
+                        <div class="platform-icon kick">
+                            <i class="fas fa-gamepad"></i>
+                        </div>
+                        <div class="platform-info">
+                            <h3>Kick</h3>
+                            <span>Gaming Streams</span>
+                        </div>
+                    </div>
+                    <p>Grow your Kick streaming channel with more followers, viewers, and chat engagement.</p>
+                    <div class="platform-features">
+                        <span>Followers</span>
+                        <span>Viewers</span>
+                        <span>Chat Messages</span>
+                        <span>Clips</span>
+                    </div>
+                </div>
+
+                <div class="platform-card" data-platform="website-traffic">
+                    <div class="platform-header">
+                        <div class="platform-icon website-traffic">
+                            <i class="fas fa-globe-americas"></i>
+                        </div>
+                        <div class="platform-info">
+                            <h3>Website Traffic</h3>
+                            <span>Web Analytics</span>
+                        </div>
+                    </div>
+                    <p>Drive targeted traffic to your website with real visitors from your target demographics.</p>
+                    <div class="platform-features">
+                        <span>Visitors</span>
+                        <span>Page Views</span>
+                        <span>Time on Site</span>
+                        <span>Conversions</span>
+                    </div>
+                </div>
+
+                <div class="platform-card" data-platform="reviews">
+                    <div class="platform-header">
+                        <div class="platform-icon reviews">
+                            <i class="fas fa-star"></i>
+                        </div>
+                        <div class="platform-info">
+                            <h3>Online Reviews</h3>
+                            <span>Reputation Management</span>
+                        </div>
+                    </div>
+                    <p>Boost your online reputation with authentic reviews across multiple review platforms.</p>
+                    <div class="platform-features">
+                        <span>5-Star Reviews</span>
+                        <span>Review Volume</span>
+                        <span>Response Rate</span>
+                        <span>Reputation Score</span>
+                    </div>
+                </div>
+
+                <div class="platform-card" data-platform="onlyfans">
+                    <div class="platform-header">
+                        <div class="platform-icon onlyfans">
+                            <i class="fas fa-users"></i>
+                        </div>
+                        <div class="platform-info">
+                            <h3>OnlyFans</h3>
+                            <span>Content Monetization</span>
+                        </div>
+                    </div>
+                    <p>Grow your OnlyFans audience with more subscribers and increase your content monetization.</p>
+                    <div class="platform-features">
+                        <span>Subscribers</span>
+                        <span>Likes</span>
+                        <span>Tips</span>
+                        <span>Messages</span>
+                    </div>
+                </div>
+
+                <div class="platform-card" data-platform="soundcloud">
+                    <div class="platform-header">
+                        <div class="platform-icon soundcloud">
+                            <i class="fab fa-soundcloud"></i>
+                        </div>
+                        <div class="platform-info">
+                            <h3>SoundCloud</h3>
+                            <span>Audio Sharing</span>
+                        </div>
+                    </div>
+                    <p>Boost your music on SoundCloud with more plays, followers, likes, and reposts.</p>
+                    <div class="platform-features">
+                        <span>Plays</span>
+                        <span>Followers</span>
+                        <span>Likes</span>
+                        <span>Reposts</span>
+                    </div>
+                </div>
+
+                <div class="platform-card" data-platform="clubhouse">
+                    <div class="platform-header">
+                        <div class="platform-icon clubhouse">
+                            <i class="fas fa-microphone"></i>
+                        </div>
+                        <div class="platform-info">
+                            <h3>Clubhouse</h3>
+                            <span>Audio Conversations</span>
+                        </div>
+                    </div>
+                    <p>Grow your Clubhouse presence with more followers and increase room participation.</p>
+                    <div class="platform-features">
+                        <span>Followers</span>
+                        <span>Room Joins</span>
+                        <span>Speaking Time</span>
+                        <span>Invitations</span>
                     </div>
                 </div>
             </div>
