Enhance hero section: Redistribute platform logos and improve purple text clarity
✨ Platform Distribution Improvements:
• Reorganized 18 platform icons for better left-right balance
• Added 4 new platforms (Threads, Vimeo, GitHub, Skype) for complete coverage
• Improved positioning to cover entire hero area evenly
• Enhanced visual distribution across both content and visual sides

🎨 Purple Text Enhancement:
• Enhanced gradient with 3-color blend (#6366f1 → #8b5cf6 → #a855f7)
• Added text-shadow for better readability
• Implemented layered gradient effect with subtle blur backdrop
• Improved contrast and visual clarity of 'with Professional AI' text

📱 Technical Updates:
• Updated platform positioning classes for balanced coverage
• Added data-text attribute for enhanced gradient effect
• Maintained responsive design and smooth animations
• All 22 platform icons now strategically distributed across full hero area

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <!-- Enhanced Main Heading -->
                 <h1 class="hero-title">
                     Transform Your Social Media
-                    <span class="gradient-text">with Professional AI</span>
+                    <span class="gradient-text" data-text="with Professional AI">with Professional AI</span>
                 </h1>
 
                 <!-- Professional Description -->
@@ -282,6 +282,28 @@
                     <div class="floating-platform platform-18">
                         <div class="platform-icon-float dribbble">
                             <i class="fab fa-dribbble"></i>
+                        </div>
+                    </div>
+                    
+                    <!-- Additional platforms for complete coverage -->
+                    <div class="floating-platform platform-19">
+                        <div class="platform-icon-float threads">
+                            <i class="fab fa-threads"></i>
+                        </div>
+                    </div>
+                    <div class="floating-platform platform-20">
+                        <div class="platform-icon-float vimeo">
+                            <i class="fab fa-vimeo"></i>
+                        </div>
+                    </div>
+                    <div class="floating-platform platform-21">
+                        <div class="platform-icon-float github">
+                            <i class="fab fa-github"></i>
+                        </div>
+                    </div>
+                    <div class="floating-platform platform-22">
+                        <div class="platform-icon-float skype">
+                            <i class="fab fa-skype"></i>
                         </div>
                     </div>
                 </div>
