--- a/index.html
+++ b/index.html
@@ -113,41 +113,63 @@
         <div class="hero-container">
             <div class="hero-content">
                 <div class="hero-badge">
-                    <i class="fas fa-award"></i>
-                    <span>AI-Driven Social Growth</span>
+                    <i class="fas fa-shield-alt"></i>
+                    <span>Enterprise AI Platform</span>
                 </div>
                 <h1 class="hero-title">
-                    <span class="gradient-text" data-text="Grow Faster. Grow Smarter.">Grow Faster. Grow Smarter.</span>
+                    Scale Your Business with 
+                    <span class="gradient-text" data-text="AI-Powered Social Intelligence">AI-Powered Social Intelligence</span>
                 </h1>
                 <p class="hero-description">
-                    Unlock your brand’s full potential with enterprise-grade AI for social media. Effortlessly manage, analyze, and scale your presence across every major platform. Trusted by industry leaders, creators, and businesses worldwide.
+                    Transform your social media strategy with enterprise-grade artificial intelligence. 
+                    Drive measurable growth, automate engagement, and unlock actionable insights across 
+                    25+ platforms. Trusted by Fortune 500 companies and leading brands worldwide.
                 </p>
+                
+                <!-- Professional Trust Indicators -->
+                <div class="hero-trust">
+                    <div class="trust-item">
+                        <i class="fas fa-check-circle"></i>
+                        <span>SOC 2 Certified</span>
+                    </div>
+                    <div class="trust-item">
+                        <i class="fas fa-lock"></i>
+                        <span>Enterprise Security</span>
+                    </div>
+                    <div class="trust-item">
+                        <i class="fas fa-chart-line"></i>
+                        <span>ROI Guaranteed</span>
+                    </div>
+                </div>
+
                 <div class="hero-actions">
                     <a href="register.html" class="btn btn-primary btn-lg">
-                        <i class="fas fa-rocket"></i>
-                        <span>Start Free Trial</span>
+                        <i class="fas fa-play"></i>
+                        <span>Start 30-Day Trial</span>
                     </a>
                     <a href="dashboard.html" class="btn btn-secondary btn-lg">
-                        <i class="fas fa-chart-line"></i>
-                        <span>See Live Demo</span>
+                        <i class="fas fa-calendar"></i>
+                        <span>Book Demo</span>
                     </a>
                 </div>
+                
+                <!-- Enhanced Professional Metrics -->
                 <div class="hero-stats">
                     <div class="stat">
-                        <div class="stat-number">50K+</div>
-                        <div class="stat-label">Verified Users</div>
+                        <div class="stat-number">$2.8B+</div>
+                        <div class="stat-label">Revenue Generated</div>
                     </div>
                     <div class="stat">
-                        <div class="stat-number">25+</div>
-                        <div class="stat-label">Platforms</div>
+                        <div class="stat-number">150K+</div>
+                        <div class="stat-label">Enterprise Users</div>
                     </div>
                     <div class="stat">
-                        <div class="stat-number">99.9%</div>
+                        <div class="stat-number">425%</div>
+                        <div class="stat-label">Avg. ROI Increase</div>
+                    </div>
+                    <div class="stat">
+                        <div class="stat-number">99.99%</div>
                         <div class="stat-label">Uptime SLA</div>
-                    </div>
-                    <div class="stat">
-                        <div class="stat-number">24/7</div>
-                        <div class="stat-label">Expert Support</div>
                     </div>
                 </div>
             </div>
